--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
           #Set artifact name
           name: artifact
           #From this path
-          path: target/data-0.0.1-SNAPSHOT.jar
+          path: target/cicdtutorial-0.0.1-SNAPSHOT.jar
     #Deploy's job
   deploy:
     #Depends on build's job
