--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,4 +91,4 @@ jobs:
           environment_name: Springbootdeploy-env
           version_label: ${{github.SHA}}
           region: us-east-1
-          deployment_package: data-0.0.1-SNAPSHOT.jar
+          deployment_package: cicdtutorial-0.0.1-SNAPSHOT.jar
