--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
           aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
           use_existing_version_if_available: false
           application_name: cicdtutorial
-          environment_name: Springbootdeploy-env
+          environment_name: Cicdtutorial-env
           version_label: ${{github.SHA}}
           region: us-east-1
           deployment_package: cicdtutorial-0.0.1-SNAPSHOT.jar
